chore: simplify ai project status text

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -18,7 +18,7 @@ jobs:
           GITHUB_OWNER: AAASS554
           STATS_BASE_URL: https://github-readme-stats.vercel.app
           BLOG_FEED_URL: ""
-          BLOG_STATIC_MESSAGE: "正在开发「AI 模型调度平台」（本地路径 `/Users/pepsi/Desktop/jdwa-code`），聚焦统一代理多家模型 API、Key 管理与观测。"
+          BLOG_STATIC_MESSAGE: "正在开发「AI 模型调度平台」，聚焦统一代理多家模型 API、Key 管理与观测。"
           GH_TOKEN: ${{ secrets.GH_STATS_TOKEN }}
         run: |
           python scripts/update_readme.py
